--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
    --fontcolor: #fff;
    --main-gray: #2a3d39;
    --2fontcolor: #222;
+   --analogBlue: #23453D;
 }
 
 body{
@@ -35,7 +36,7 @@ body{
    justify-content: end;
    font-size: 1.35rem;
    font-weight: bold;
-   background-color: var(--main-gray) 
+   background-color: var(--analogBlue) 
 }
 
 .hamburger{
@@ -69,7 +70,9 @@ body{
    justify-content: center;
    align-items: center;
    flex-direction: column;
-   background: linear-gradient(to top, var(--main-gray), #1e2c29);
+   background-image: linear-gradient(to right bottom, #2a3d3993, #23453da4), url('imagens/code-background.jpg');
+   background-size: cover;
+   background-position: center;
    width: 100%;
    height: 100vh;
 }
